--- a/package.json
+++ b/package.json
@@ -53,7 +53,11 @@
     "gulp-autoprefixer": "0.0.7",
     "gulp-coffee": "^1.4.2",
     "gulp-build": "^0.5.3",
-    "gulp-ruby-sass": "^0.4.3"
+    "gulp-ruby-sass": "^0.4.3",
+    "gulp-jst": "^0.1.1",
+    "gulp-jstemplater": "0.0.3",
+    "gulp-bower-files": "^0.2.2",
+    "gulp-bower-src": "0.0.1"
   },
   "dependencies": {
     "gulp": "^3.6.1"
