--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@
 extension.zip
 node_modules/
 ./node_modules/
+./bower_components/
 node_modules/*
 ./node_modules/*
 ./tmp/*
 ./bower_components/*
-bower_components/
+./bower_components/**/*
+bower_components/*
